rspec-tools/tests/resources/invalid-rules/S200/java/rule.adoc
== Why is this an issue?
== How to fix it?
=== How to fix it in Razor
=== Yolo


